# FitRule

./: CHANGELOG.md  README.md  fitrule.cabal  plan1.txt  plan2.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: fitrule-0.1.0.0-inplace.conf  package.cache
examples/: plan.txt  rules.txt
src/: Domain.hs  Generator.hs  Parser.hs  Render.hs  Validate.hs
test/: Spec.hs
